# casewright

./: .env.example  .gitignore  PLAN.md  PROJECT_LOG.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0da14565c97a_add_agent_runs_progress_column.py  4c2176d8dd94_initial_schema.py  5bde01e0c30e_add_cases_archived_soft_delete_flag.py  c71cabce4bf1_widen_citation_marker_column.py  d822e74f8325_widen_strategy_memos_viability_column.py
backend/app/: __init__.py  config.py  db.py  logging_config.py  main.py
backend/app/agents/: __init__.py  checkpointer.py  criteria.py  llm.py  petition_graph.py  rfe_graph.py  runner.py  schemas.py  state.py  verification.py
backend/app/api/: __init__.py  assessment.py  audit.py  auth.py  cases.py  deadlines.py  deps.py  documents.py  drafts.py  qa.py  rfe.py  rollups.py  runs.py
backend/eval_fixtures/: example_synthetic_case.json
backend/scripts/: create_firm.py  eval_golden_cases.py  ingest_precedent.py  report_metrics.py  seed_knowledge.py  setup_checkpointer.py
backend/tests/: conftest.py  test_active_runs.py  test_audit_log_endpoint.py  test_auth.py  test_case_archive.py  test_case_health.py  test_case_qa.py  test_deadlines.py  test_documents.py  test_eval_replay.py  test_eval_scoring.py  test_ingest_precedent.py  test_llm.py  test_petition_graph.py  test_rfe_graph.py  test_rfe_graph_routing.py  test_risk_radar.py  test_rollups.py  test_tenancy.py  test_verification.py
(+129 files in other folders)
